--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is an intro to github</h1>
     <p>This is awesome</p>
     <p>We are learning git</p>
+    <p>I just created my branch</p>
   </body>
 </html>
